alterado cor do link register

--- a/src/style.css
+++ b/src/style.css
@@ -70,6 +70,10 @@ body {
     box-shadow: 1px 1px 10px 0px rgba(0,0,0,0.5);
 }
 
+.container .info button a {
+    color: var(--dark);
+}
+
 .container .info button:hover {
     cursor: pointer;
     background-color: var(--soft);
